TEST_PROGRAMS/VALID/08/prints.go
package main;
func main(){
    x, y, z := 1, 2, 3;
    print(x, y, z);
    println(x, y, z);
}
