TEST_PROGRAMS/INVALID/03/invalid_print1.go
package main

func f() {
	print(mystuff)
	println("other stuff")
	print("xyz");
	println(myid);
	print(mystuff, myotherstuff)
	println("other stuff", "major things", myid);
	println("ERROR THIS LINE", x,)

	}
}
